Add VS Code GitHub Copilot integration docs for Keycloak OAuth
- Add "Use Keycloak OAuth MCP server with GitHub Copilot" section to README
- Add step-by-step instructions for connecting VS Code to deployed MCP server
- Include screenshots for authentication flow (allow access, sign-in, redirect)
- Add Spanish translation of the new section to spanish/README.md
- Configure VS Code redirect URIs in Keycloak realm for DCR support
- Update infra and keycloak configs for VS Code OAuth redirect handling

--- a/keycloak/Dockerfile
+++ b/keycloak/Dockerfile
@@ -22,5 +22,6 @@ ENTRYPOINT ["/opt/keycloak/bin/kc.sh"]
 # Start in dev mode with H2 database (still uses pre-built themes)
 # --proxy-headers=xforwarded tells Keycloak it's behind a reverse proxy that sets X-Forwarded-* headers
 # --hostname-strict=false allows dynamic hostname resolution from proxy headers
+# --http-relative-path=/auth sets the base path so Keycloak serves all content under /auth/*
 # --import-realm imports the MCP realm on startup
-CMD ["start-dev", "--http-port=8080", "--proxy-headers=xforwarded", "--hostname-strict=false", "--import-realm"]
+CMD ["start-dev", "--http-port=8080", "--proxy-headers=xforwarded", "--hostname-strict=false", "--http-relative-path=/auth", "--import-realm"]
